@@ -5,6 +5,7 @@
 	Correct extra checks.
 	(epackage-lint-extra-buffer-run-lm): Adjust pure numric message
 	to warning.
+	(epackage-lint-extra-checkdoc-advice): New.
 
 2012-01-03 Tue  Jari Aalto  <jari.aalto@cante.net>
 
